[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct web-based polls
long_description = file:README.rst
url = https://github.com/Qiese
author = bieehoang
author_email = dev.bieehoang.io@gmail.com
license = BSD-3-Clause 
classifiers = 
	Enviroment :: Web Environment
	Framework :: Django
	Framework :: Django :: 4.1.1
	Intended Audience :: Developer
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python            
	Programming Language ::	Python :: 3     
	Programming Language :: Python :: 3 :: Only           
	Programming Language :: Python :: 3.9           
	Programming Language :: Python :: 3.10
	Topic :: Internet :: WWW//HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires  = >=3.8
install_requires = Django >= 4.0

           
